# mnist_classifier

./: README.md  app.py  main.py  noxfile.py  pyproject.toml  service.py  train.py
env_build/: Dockerfile  build.sh  run.sh
kubernetes/: deploy.sh  flask_deployment.yaml  flask_ingress.yaml  flask_service.yaml  remove.sh
mnist_classifier/: config.py  dataloader.py  model.py  predictor.py  tester.py  trainer.py  utils.py
notebooks/: main.ipynb
saved_models/: fingerprint.pb  keras_metadata.pb  saved_model.pb
saved_models/variables/: variables.index
spec/: service.yaml
tests/: model_test.py  noxfile.py  test_api.py  test_inferrer.py
