[tool.poetry]
name = "mnist-classifier"
version = "0.1.0"
description = ""
authors = ["Betina Borisova <b.borisowa17@gmail.com>"]
readme = "README.md"
packages = [{include = "mnist_classifier"}]

[tool.poetry.dependencies]
python = ">=3.8, <=3.10.6"
numpy = "1.24.2"
tensorflow = "^2.11.0"
nox = "^2022.11.21"
pytest = "^7.2.2"
flask = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
